Update the Response for get API